--- a/templates/productos/lista_productos.html
+++ b/templates/productos/lista_productos.html
@@ -42,11 +42,10 @@
                         </thead>
                         <tbody>
                             {% for prod in productos %}
-                            <tr {% if prod.baja %}
-                                class='danger'
-                             {% endif %}>
-                                <td><div class="btn-group">
-                                      <button type="button" class="btn btn-xs color_barra" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <tr {% if prod.baja %}class='danger'{% endif %}>
+                                <td>
+                                    <div class="btn-group">
+                                      <button type="button" title="{{ prod.pk|safe}}" class="btn btn-xs color_barra" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-settings"> </i> <span class="caret"></span>
                                       </button>
                                       <ul class="dropdown-menu dropdown-menu-default">
