--- a/templates/header.html
+++ b/templates/header.html
@@ -52,7 +52,7 @@
               </div>
           </ul>
         </li>
-        <li>   
+        <li class="hidden-xs">   
           <a href="mailto:{{EMAIL_CONTACTO}}" title="Contacto/Enviar Consultas"><i class="icono_mail icon-envelope"></i></a>
         </li>
       </ul>      
