--- a/templates/menues_mobile.html
+++ b/templates/menues_mobile.html
@@ -169,7 +169,7 @@
                                                     <a href="{% url 'movimientos_stock' %}">Movimientos Productos/Stock</a>
                                                   </li>
                                                   <li>
-                                                    <a href="{% url 'rankings' %}">Ranking Ventas/Compras</a>
+                                                    <a href="{% url 'rankings' %}">Estadísticas Ventas/Compras</a>
                                                   </li>
                                             </ul>
                                         </li>
