--- a/templates/usuarios/usuario_form.html
+++ b/templates/usuarios/usuario_form.html
@@ -9,7 +9,7 @@
  	<link rel="stylesheet" href="{% static 'css/abms.css'%}?{% now "Ymd"%}" type="text/css" >  
 {% endblock %}
 {% block extra_js %}        
- <script src="{% static 'js/scripts/scripts_configuracion.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
+ <script src="{% static 'js/scripts/scripts_usuarios.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
 {% endblock %}
 
 
@@ -51,14 +51,17 @@
 									   
 					                      								       
 								         <div class="row">
-								          		<fieldset>
-										       		<legend>PERMISOS DE USUARIO</legend>								
-										       		<div class="col-sm-12">
-										                <div class="row cerca">
-								                                {{form.permisos}}
-							                            </div>                                                  
-								                    </div>
-								                </fieldset>		
+							          		<fieldset>
+									       		<legend>PERMISOS DE USUARIO</legend>								
+									       		<div class="col-sm-12">
+									                <div class="row cerca botonera">										                
+								                	<input type="checkbox" id="checkall" title="Seleccionar Todas"/>SELECCIONAR TODOS/NINGUNO</a>
+									                </div>
+									                <div class="row cerca">
+							                                {{form.permisos}}
+						                            </div>                                                  
+							                    </div>
+							                </fieldset>		
 
 									     
 						              	</div>  
@@ -86,22 +89,5 @@
 	     	</div>                        
 	    </div>
 </div>	
-<script type="text/javascript">
-  $.fn.datepicker.dates['es'] = {
-    days: ["Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo"],
-    daysShort: ["Dom", "Lun", "Mar", "Mié", "Jue", "Vie", "Sáb", "Dom"],
-    daysMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa", "Do"],
-    months: ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
-    monthsShort: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
-    today: "Hoy"
-  };
-  
-  $('.datepicker').datepicker({
-          format: "dd/mm/yyyy",
-          language: "es",
-          autoclose: true,
-          todayHighlight: true
-    });
 
-</script>
 {% endblock %}
