--- a/templates/general/cta_cte/saldos_proveedores.html
+++ b/templates/general/cta_cte/saldos_proveedores.html
@@ -3,6 +3,8 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load humanize %}
+{% block extra_js %}    
+{% endblock %}
 {% block main %} 
     
         <div class="row">
