--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -3,7 +3,8 @@
 {% load i18n l10n  %}
 {% load bootstrap3 %}
 {% load humanize %}
-{% block extra_js %}        
+{% block extra_js %}   
+    {{ block.super }}     
     <script src="{% static 'js/scripts/scripts_listado_ventas.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
 {% endblock %}
 
