--- a/templates/reportes/contables/seguimiento_cheques.html
+++ b/templates/reportes/contables/seguimiento_cheques.html
@@ -4,6 +4,7 @@
 {% load bootstrap3 %}
 {% load humanize %}
 {% block extra_js %}            
+  {{ block.super }}
     <script src="{% static 'js/scripts/scripts_cheques.js'%}?{% now "Ymd"%}" type="text/javascript"></script>    
 {% endblock %}
 {% block main %} 
