--- a/templates/reportes/varios/vencimientos_cpbs.html
+++ b/templates/reportes/varios/vencimientos_cpbs.html
@@ -3,7 +3,8 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% load humanize %}
-{% block extra_js %}        
+{% block extra_js %}   
+    {{ block.super }}     
     <script src="{% static 'js/scripts/scripts_comprobantes.js'%}?{% now "Ymd"%}" type="text/javascript"></script>
 {% endblock %}
 
