--- a/templates/trabajos/orden_pedido/op_listado.html
+++ b/templates/trabajos/orden_pedido/op_listado.html
@@ -3,6 +3,7 @@
 {% load i18n l10n %}
 {% load humanize %}
 {% block extra_js %}            
+    {{ block.super }}
     <script src="{% static 'js/scripts/scripts_general.js'%}?{% now "Ymd"%}" type="text/javascript"></script>    
 {% endblock %}
 {% block main %} 
