--- a/templates/menues.html
+++ b/templates/menues.html
@@ -178,7 +178,7 @@
                  {% if permisos_rep_ingr_egr %}
                   <div class="col-sm-6">
                     <ul class="mega-menu-submenu">
-                     {% if 'permisos_rep_ingr_egr' in permisos_grupo %} 
+                     {% if permisos_rep_ingr_egr %} 
                       <li>
                         <h3>REPORTES CUENTAS CORRIENTES</h3>
                       </li>
