--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
         <script src="{% static 'js/jquery.waypoints.min.js' %}" type="text/javascript"></script>        
 
         {% block extra_js %}
-          <script src="{% static 'DataTables/datatables.min.js' %}" type="text/javascript"></script>
+          <script src="{% static 'DataTables/datatables.js' %}" type="text/javascript"></script>
           <script src="{% static 'DataTables/moment.min.js' %}" type="text/javascript"></script>
           <script src="{% static 'DataTables/datetime-moment.js' %}" type="text/javascript"></script>
           <script src="{% static 'DataTables/Responsive-2.2.1/js/dataTables.responsive.min.js' %}" type="text/javascript"></script>
