mail,settings y recibo cbza ctacte

--- a/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
+++ b/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
@@ -65,7 +65,7 @@
                                         {% endif %}
                                         
                                         <li><a href="#" 
-                                                onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR LA COMPRA SELECCIONADA?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_rec_cobranza_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
+                                                onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR EL COMPROBANTE SELECCIONADO?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_rec_cobranza_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
                                         </li>           
                                         
                                         <li role="separator" class="divider"></li>
