--- a/templates/general/facturas/cobranza_ctacte.html
+++ b/templates/general/facturas/cobranza_ctacte.html
@@ -12,12 +12,12 @@
 
 
  @page {
-         size: a5 landscape;
+         size: A4;
          margin: 0.5cm 0.5cm 0.5cm 0.5cm;
          padding: 0;         
          @frame footer {
                         -pdf-frame-content: page-footer;
-                        bottom: 0.5cm;
+                        top: 14cm;
                         height: 1cm;
                         margin-right: 0.5cm;                        
                         margin-left: 0.5cm;                                                
@@ -28,7 +28,7 @@
                         margin-right: 0.5cm;                        
                         margin-left: 0.5cm; 
                         height: 0.5cm;
-                        bottom:0.2cm;                        
+                        top:14.5cm;                        
                     }
          }
 </style>
@@ -149,6 +149,8 @@
 <div id="page-footer2" class="pie_sistema">
   <img alt="" class="pie_logo" src="{% static 'images/logo_iron.png' %}"/>&nbsp;&nbsp;IRONweb Gestión & Facturación
 </div>
-
+<div>
+   <pdf:nextpage/>
+</div>
 </body>
 </html>
