--- a/templates/general/facturas/cobranza_ctacte.html
+++ b/templates/general/facturas/cobranza_ctacte.html
@@ -12,12 +12,13 @@
 
 
  @page {
-         size: a5 landscape;
+         size: A4;
          margin: 0.5cm 0.5cm 0.5cm 0.5cm;
          padding: 0;         
          @frame footer {
                         -pdf-frame-content: page-footer;
                         bottom: 0.5cm;
+                        top: 14cm;
                         height: 1cm;
                         margin-right: 0.5cm;                        
                         margin-left: 0.5cm;                                                
@@ -29,6 +30,7 @@
                         margin-left: 0.5cm; 
                         height: 0.5cm;
                         bottom:0.2cm;                        
+                        top:14.5cm;     
                     }
          }
 </style>
