--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -47,18 +47,18 @@
                                     <th class="no-sort text-center" data-priority="1"></th>
                                     <th class="no-sort text-center" data-priority="2"></th>
                                     <th class="no-sort text-center" data-priority="3"></th>
-                                    <th class="text-center" data-priority="6">Cobranza</th>
-                                    <th class="text-center" data-priority="8">CAE</th>
-                                    <th class="text-center" data-priority="4">Fecha CPB</th>
-                                    <th class="text-center" data-priority="8" >Tipo</th>
-                                    <th class="text-left" data-priority="5">Nº CPB</th>
-                                    <th class="text-left" data-priority="9" >Cliente</th>
-                                    <th class="text-right" data-priority="7" >Saldo</th>
-                                    <th class="text-right" data-priority="10">Total</th>                                
-                                    <th class="text-right" data-priority="13">Importe</th>
-                                    <th class="text-right" data-priority="12">IVA</th>
-                                    <th class="text-right" data-priority="14">Perc./Imp.</th>
-                                    <th class="text-center" data-priority="15">CAE Nº</th>                                                                
+                                    <th class="imprimir text-center" data-priority="6">Cobranza</th>
+                                    <th class="imprimir text-center" data-priority="8">CAE</th>
+                                    <th class="imprimir text-center" data-priority="4">Fecha CPB</th>
+                                    <th class="imprimir text-center" data-priority="8" >Tipo</th>
+                                    <th class="imprimir text-left" data-priority="5">Nº CPB</th>
+                                    <th class="imprimir text-left" data-priority="9" >Cliente</th>
+                                    <th class="imprimir text-right" data-priority="7" >Saldo</th>
+                                    <th class="imprimir text-right" data-priority="10">Total</th>                                
+                                    <th class="imprimir text-right" data-priority="13">Importe</th>
+                                    <th class="imprimir text-right" data-priority="12">IVA</th>
+                                    <th class="imprimir text-right" data-priority="14">Perc./Imp.</th>
+                                    <th class="imprimir text-center" data-priority="15">CAE Nº</th>                                                                
                                     <th data-priority="17">Descripción</th>                                
                                     <th data-priority="16">Vendedor</th>
                                     <th data-priority="18">CPB Relacionado</th>
